Fixed scan camera disappearing. Menu overlaps page.

--- a/mysite/academic_adventure/static/academic_adventure/ui.css
+++ b/mysite/academic_adventure/static/academic_adventure/ui.css
@@ -5,12 +5,13 @@ html, body
 
 #navbarContainer {
     background-color: #242c44;
-    z-index: 1;
+    z-index: 2;
     float: left;
+    position: absolute;
     padding: 10px;
     height: 100%;
     width: 110px;
-    margin-left: 0rem;
+    margin-left: -15rem;
     transition: margin 0.5s ease-out;
 }
 
@@ -32,7 +33,7 @@ html, body
 
 #navbarButton {
     background-color: #242c44 !important;
-    border: 2px solid white;
+    border: 2px solid black;
     border-radius: 8px;
     z-index: 1;
     width: 70px;
@@ -63,7 +64,7 @@ html, body
 } 
 
 body.sb-sidenav-toggled #navbarContainer {
-margin-left: -15rem;
+margin-left: 0rem;
 }
 
 /* Leaderboard */
